--- a/Bank Management System/Views/BankAuthorizationForm/Create.cshtml
+++ b/Bank Management System/Views/BankAuthorizationForm/Create.cshtml
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <center><h6>BANK AUTHORIZATION FORM</h6></center>
+    <h6>BANK AUTHORIZATION FORM</h6>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
