--- a/Bank Management System/Views/BankAuthorizationForm/Create.cshtml
+++ b/Bank Management System/Views/BankAuthorizationForm/Create.cshtml
@@ -50,7 +50,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.EmailId, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.EmailId, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.PasswordFor(model => model.EmailId, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.EmailId, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -74,7 +74,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.BankBranch, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.BankBranch, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.PasswordFor(model => model.BankBranch, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.BankBranch, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -104,7 +104,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Confirm_bank_Account_Type, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Confirm_bank_Account_Type, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.PasswordFor(model => model.Confirm_bank_Account_Type, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Confirm_bank_Account_Type, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -118,7 +118,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Signature, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Signature, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.PasswordFor(model => model.Signature, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Signature, "", new { @class = "text-danger" })
         </div>
     </div>
